css/style.css
html {
  font-size: 62.5%;
  font-family: 'Work Sans', sans-serif;
}

ul {
  list-style-type: none;
}

a {
    text-decoration: none !important;
    color: inherit;
}

#page {
  opacity: 1;
  transition: 0.5s;
}

#page.fade-out {
  opacity: 0;
  transition: none;
}

header {
  height: 8rem;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  background-color:rgba(255,255,255,0.5);
}

.title {
  display: inline-block;
  /* position: absolute;
  top: 2vh;
  left: 8vw; */
  padding-left: 8vw;
  padding-top: 1rem;
  font-weight: 300;
  font-size: 2.3rem;
  line-height: 7rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 7rem;
}

.header-menu-container {
  display: inline-block;
  float: right;
  padding-right: 8vw;
  padding-top: 3rem;
}

/* .header-menu {
  padding-left: 0;
} */

.header-menu li {
  display: inline-block;
  padding-left: 2.5rem;
  font-size: 1.4rem;
  color: #b5b5b5;
  transition: 0.3s;
}

.header-menu li:hover {
  color: black;
}

.image-wrapper {
  position: absolute;
  top: 53%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 70vh;
  width: 84vw;
}

h4 {
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 5rem;
  text-align: center;
}

.index-image {
  background-image: url(L_dive.gif);
  background-size: cover;
  background-position: center;
}

.hamburger {
  display: none;
}

@media screen and (max-width: 500px) {
  /* .image-wrapper {
    width: 78vw;
    position: static;
    margin: auto;
    margin-top: 7vh;
    transform: translate(0%, 0%);
    display: block;
  } */

  .header-menu-container {
    display: none;
  }

  button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    outline: none;
    padding: 0;
    appearance: none;
  }

  .hamburger {
    display: inline;
    font-size: 2rem;
    position: absolute;
    top: 4rem;
    right: 9vw;
    color: #b5b5b5;
    transition: 0.3s;
  }

  .hamburger:hover {
    color: black;
  }

  .cross {
    font-size: 2rem;
    position: absolute;
    top: 4rem;
    right: 9vw;
    color: black;
  }

  .mobile-menu {
    margin-right: 0;
    margin-left: auto;
    padding-right: 9vw;
    font-size: 2rem;
    line-height: 5rem;
    text-align: right;
    height: calc(100vh - 8rem);
    width: fit-content;
    background-color: rgba(255,255,255,0.5);
  }

  .mobile-menu ul {
    padding-left: 2rem;
    margin: 0;
  }

  .mobile-menu a {
    display: inline-block;
    width: 10rem;
  }

}

/* <---------------------works----------------------> */

.works-container {
  font-size: 0;
  width: 84vw;
  margin: auto;
}

@media screen and (min-width: 500px) {
  .works-container {
    position: fixed;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

.work-container {
  position: relative;
  height: 20vh;
  width: 16vw;
  display: inline-block;
  margin: 2.5vw;
  /* border: none !important; */
  text-align: center;
}

.work-container-overlay {
  height: 100%;
  width: 100%;
  /* padding: 15%; */
  background-color: rgb(255,255,255);
  opacity: 0;
  transition: 0.3s;
}

.work-container-overlay:hover {
  opacity: 0.7;
}

/* .work-title-container{
  z-index: 1000;
} */


.work-title-container, .work-descr-container {
  position: absolute;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* .work-title-container h2 {
  font-size: 2rem;
  font-weight: 600;
} */

.work-descr-container p {
  font-size: 1.5rem;
  line-height: 2.3rem;
  padding: 0 2.5vw;
  text-transform: uppercase;
}

@media screen and (max-width: 500px) {
  .works-container{
    width: 82vw;
    padding-top: 8rem;
  }

  .work-container {
    width: 35vw;
    margin: 3vw;
  }
}

#dive {
  background-image: url(dive_low.gif);
  background-size: cover;
  background-position: center;
}

#jimmio {
  background-image: url(jimmio.jpg);
  background-size: cover;
  background-position: center;
}

#fetop {
  background-image: url(fetop.gif);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

#bubbleway {
  background-image: url(bubbleway.jpg);
  background-size: cover;
  background-position: center;
}

#conservatory {
  background-image: url(conservatory.gif);
  background-size: cover;
  background-position: center;
}

#study {
  background-image: url(study.gif);
  background-size: cover;
  background-position: center;
}

#time {
  background-image: url(time.jpg);
  background-size: cover;
}

#gradworkc {
  background-image: url(book.jpg);
  background-size: cover;
}

/* <---------------------(each work common styles)----------------------> */

.work-image {
  object-fit: cover;
}

.work-title-vline {
  display: inline-block;
  margin-left: 10vw;
  margin-top: 95vh;
  width: 3px;
  height: 7rem;
  background-color: #E8E8E8;
}

.work-text {
  display: inline-block;
  margin-left: 2vw;
  margin-top: 95vh;
}

.work-text h2 {
  font-size: 3rem;
  font-weight: 600;
  line-height: 1.5rem;
}

.work-text h3 {
  font-size: 2rem;
  font-weight: 400;
  text-transform: uppercase;
}

.work-overview {
  margin: 20vh 12vw 8vh 12vw;
}

.work-overview p {
  font-size: 1.7rem;
  line-height: 2.5rem;
  width: 50vw;
}

.bold {
  font-weight: 600;
}

.italic {
  font-style: italic;
}

.work-image-dual {
  width: 85vw;
  margin: auto;
}

.work-image-1 {
  display: inline-block;
  height: 36vh;
  width: 38vw;
  margin: 2vw;
}

.work-descr-detail-container {
  width: 50vw;
  margin: 8vh auto;
  font-size: 1.5rem;
  font-weight: 300;
  line-height: 2.3rem;
}

.work-image-2 {
  display: block;
  width: 85vw;
  height: 70vh;
  margin: 2vh auto;
}

.work-image-2.thin {
  height: 15vh;
}

.work-image-dual-vert {
  width: 77vw;
  margin: 6vh auto;
}

.work-image-3 {
  display: inline-block;
  width: 32vw;
  height: 46vw;
  margin: 0 3vw;
  vertical-align: top;
}

.conservatory-video, .study-video {
  width: 85vw;
  padding:56.25% 0 0 0;
  position:relative;
  margin: auto;
}

@media screen and (max-width: 500px) {
  .work-image-top {
    padding-top: 8rem;
  }

  .work-title-vline {
    margin: 0 3vw 0 10%;
  }

  .dl-vline {
    height: 9rem;
  }

  .tl-vline {
    height: 10rem;
  }

  .ql-vline {
    height: 12rem;
  }

  .cl-vline {
    height: 16rem;
  }

  .work-text {
    margin-right: 10%;
    margin-top: 0;
    width: 70%;
  }

  .work-title-box {
    margin-top: 5vh;
    width: 100%;
  }

  .work-text h2 {
    margin-top: 0;
    line-height: 3.5rem;
  }

  .work-text h3 {
    font-size: 1.6rem;
    line-height: 2.3rem;
    margin-bottom: 1.5rem;
  }

  .work-overview {
    margin-top: 12vh;
  }

  .work-overview p {
    font-size: 1.3rem;
    line-height: 2rem;
    width: 100%;
  }

  .work-image-1 {
    height: 30vh;
    width: 100%;
    margin: 2vh 0;
  }

  .work-descr-detail-container {
    width: 70vw;
  }

  .work-image-2 {
    height: 32vh;
    margin: 2vh auto;
  }

  .work-image-dual-vert {
    width: 82vw;
    margin: 2vh auto;
  }

  .work-image-3 {
    width: 36vw;
    height: 54vw;
    margin: 2vw;
  }
}

@media screen and (min-width: 500px) {
  .work-image-top {
    position: absolute;
    top: 53%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 70vh;
    width: 84vw;
  }

  .work-image-2.small {
    transform: scale(0.7);
  }

}

/* <---------------------work_2----------------------> */

.work-image-4.jimmio {
  object-fit: contain;
}


/* <---------------------work_2----------------------> */

.work-image-4.jimmio {
  object-fit: contain;
}

.jimmio-eg {
  height: 40%;
  width: 100%;
  margin-top: 0;
}

.jimmio-eg-descr {
  font-size: 1.2rem;
  line-height: 2rem;
  color: #757575;
}

.jimmio-img {
  height: inherit;
}

@media screen and (max-width: 500px) {
  .jimmio-img {
    width: 100%;
  }
}

/* <---------------------work_3----------------------> */


.work-image-4 {
  width: 20vw;
  height: 20vh;
  display: inline-block;
  margin: 2vh 0.5vw;
}

@media screen and (max-width: 500px) {
  .work-image-4 {
    width: 40vw;
    height: 14vh;
    margin: 2vh 1vw;
  }

}

/* <---------------------work_6----------------------> */

.sq {
  width: 70vw;
}

/* <---------------------about----------------------> */

.about-container {
  position: fixed;
  top: 53%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 45vw;
  height: auto;
  font-size: 2rem;
  line-height: 3rem;
}

@media screen and (max-width: 500px) {
  .about-container {
    width: 60vw;
    font-size: 1.5rem;
    line-height: 2.8rem;
    left: 51%;
  }
}
/* <---------------------contact----------------------> */

.contact-container {
  position: fixed;
  top: 53%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.fab, .far {
  font-size: 4rem;
  padding: 1.5vw;
  color: #E8E8E8;
  transition: 0.3s;
}

.fab:hover, .far:hover {
  color: black;
}

/* <---------------------footer----------------------> */
footer {
  height: 5rem;
  width: 100%;
  color: #e8e8e8;
  text-align: center;
  line-height: 5rem;
  position: absolute;
  bottom: 0;
}

.pc-sticky-footer {
  position: inherit;
}

@media screen and (max-width: 500px) {
  .sticky-footer {
    position: inherit;
  }
}

